# fibras_vs_realestate

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
dags/: raw_fibras_dag.py
docs/: assumptions.md  exchema_definitions.md  methodology.md  simulation_model.md
notebooks/: 01_data_exploration.ipynb
src/fibras_vs_realestate/config/: initial_param.py  logger_config.py  settings.py
src/fibras_vs_realestate/config/data_contracts/: contracts.py
src/fibras_vs_realestate/config/data_pipeline/: data_pipeline.py
src/fibras_vs_realestate/config/financial/: tickers.py
src/fibras_vs_realestate/config/initial/: initial_param.py
src/fibras_vs_realestate/config/layers/: layers.py
src/fibras_vs_realestate/config/log_constructor/: log_constructor.py  logs_processed_pipeline.py  logs_raw_pipeline.py
src/fibras_vs_realestate/data/: extract_fibras.py
src/fibras_vs_realestate/finance/: fibras_model.py
src/fibras_vs_realestate/models/: fibras_simulation.py  montecarlo_simulation.py  real_estate_simulation.py
src/fibras_vs_realestate/pipelines/: fibras_pipeline.py  fibras_processed_pipeline.py  fibras_raw_pipeline.py
tests/: conftest.py
tests/config/: conf_data_save.py
tests/data_quality/: test_data_validator.py
tests/raw/: test_extractor.py  test_transformer.py
tests/storage/: test_data_save.py  test_log_constructor.py
tests/unit_test/: test_fibras_processed_pipeline.py  test_fibras_raw_pipeline.py
(+29 files in other folders)
