[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-vs-fibras"
version = "0.1.0"
description = "Production-ready data pipeline for banking metrics using Airflow"
authors = [
  { name = "Sidhartha Manriquez" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
